crates/ts-doc/tests/snapshots/transform__builtins__referenced_function.snap
---
source: tests/transform.rs
expression: "transform(\"index\",\n\"function foo() {\\n  return 'foo';\\n}\\nexport let d = foo();\")"
---
{
  "dependencies": [],
  "types": [
    {
      "type": "any"
    },
    {
      "type": "function",
      "id": "/test/src/index.tsx:foo",
      "name": "foo",
      "parameters": [],
      "return": 0,
      "typeParameters": [],
      "description": null,
      "access": null,
      "examples": []
    },
    {
      "type": "any"
    }
  ],
  "exports": {
    "d": 2
  },
  "export_all": []
}
