crates/ts-doc/tests/snapshots/transform__builtins__referenced_string.snap
---
source: tests/transform.rs
expression: "transform(\"index\", \"let name = 'foo';\\nexport let c = name;\")"
---
{
  "dependencies": [],
  "types": [
    {
      "type": "string",
      "value": "foo"
    }
  ],
  "exports": {
    "c": 0
  },
  "export_all": []
}
