crates/ts-doc/tests/snapshots/transform__builtins__static_number.snap
---
source: tests/transform.rs
expression: "transform(\"index\", \"export let a: number = 4;\")"
---
{
  "dependencies": [],
  "types": [
    {
      "type": "number",
      "value": null
    }
  ],
  "exports": {
    "a": 0
  },
  "export_all": []
}
