crates/ts-doc/tests/snapshots/transform__builtins__static_string.snap
---
source: tests/transform.rs
expression: "transform(\"index\", r#\"export let b: string = \"foo\";\"#)"
---
{
  "dependencies": [],
  "types": [
    {
      "type": "string",
      "value": null
    }
  ],
  "exports": {
    "b": 0
  },
  "export_all": []
}
